--- a/0806.4309/ProceedingBonn.tex
+++ b/0806.4309/ProceedingBonn.tex
@@ -155,20 +155,20 @@ As a second example, let us consider the motion of a ping-pong ball of inertial 
 \begin{equation} 
 m_{\mathrm{inert}}{\bf a}=m_{\mathrm{grav}}{\bf g}-\rho V{\bf g},
 \end{equation}
-where the first term is the ball's weight and the second one Archimedes' buoyant force. If the ball is ten time lighter than the equivalent volume of water, then it experiences an acceleration ${\bf a}=-9\,{\bf g}$, which is obviously nonsensical. The hole in the previous reasoning is that we did not take into account the inertia of the surrounding fluid. Using a suitable ansatz for the fluid's velocity field, it can be shown \cite{connesmarcolli} that the latter implies a shift of the inertial mass of the ball 
+where the first term is the ball's weight and the second one Archimedes' buoyant force. If the ball is ten times lighter than the equivalent volume of water, then it experiences an acceleration ${\bf a}=-9\,{\bf g}$, which is obviously nonsensical. The hole in the previous reasoning is that we did not take into account the inertia of the surrounding fluid. Using a suitable ansatz for the fluid's velocity field, it can be shown \cite{connesmarcolli} that the latter implies a shift of the inertial mass of the ball 
 \begin{equation}
 m_{\mathrm{inert}}\rightarrow m_{\mathrm{inert}}+\frac{\rho V}{2},
 \end{equation}
-which yields the more acceptable acceleration of ${\bf a}=-3/2\,{\bf g}$.  Both these elementary examples illustrate the main feature of renormalization: In a simple theory (geometrical optics, Newton's law of dynamics), the effect of unobserved degrees of freedom, which should be described by a more sophisticated theory (electrodynamics, fluid mechanics), are taken into account by a mere change of parameters in the simpler theory.  
+which yields the more acceptable acceleration of ${\bf a}=-3/2\,{\bf g}$.  Both these elementary examples illustrate the main feature of renormalization: in a simple theory (geometrical optics, Newton's law of dynamics), the effect of unobserved degrees of freedom, which should be described by a more sophisticated theory (electrodynamics, fluid mechanics), are taken into account by a mere change of parameters in the simpler theory.  
 
  
-The very same type of ideas show off in QFT, which grew up from the marriage between special relativity and quantum mechanics. First, recall that one of the main lessons from special relativity is the equivalence between matter and energy, as neatly summarized by Einstein's celebrated relation $E=mc^{2}$. This is currently observed in high energy physics experiments: Incoming particles (say leptons, like a pair $e^{+}e^{-}$) with a total given energy collide and result in some outgoing particles whose nature may be totally different (for instance, a pair $q\overline{q}$).  Of course, total energy is always conserved so that heavy particles may appear only if the incoming energy is high enough.
+The very same type of ideas show up in QFT, which grew up from the marriage between special relativity and quantum mechanics. First, recall that one of the main lessons from special relativity is the equivalence between matter and energy, as neatly summarized by Einstein's celebrated relation $E=mc^{2}$. This is currently observed in high energy physics experiments: incoming particles (say leptons, like a pair $e^{+}e^{-}$) with a total given energy collide and result in some outgoing particles whose nature may be totally different (for instance, a pair $q\overline{q}$).  Of course, total energy is always conserved so that heavy particles may appear only if the incoming energy is high enough.
      
 On the other hand, quantum mechanics provides us with a description of the microscopic world. Its predictions, carefully verified by experiments, yield the probability of finding the system in a final state $|f\rangle$ knowing that it was initially in the state $|i\rangle$. The transition amplitude from an initial state to the final one is often expressed as a sum over all (unobserved) intermediate states $|n\rangle$,
 \begin{equation}
 \langle f|i\rangle=\sum_{n}\langle f|n\rangle\langle n|i\rangle.
 \end{equation}
-In QFT, these initial and final states represent a fixed number of elementary particles of given energy but the summation over all the intermediate states involves an arbitrary number of virtual particles of arbitrarily high energies. It is fundamental to note that none of the intermediate states are observed since the experiment only answers the question \emph{"What is the probability of finding the system in the state $|f\rangle $ at  the end of the experiment if we know that it was initially in the state $|i\rangle$?"}.  
+In QFT, these initial and final states represent a fixed number of elementary particles of given energy but the summation over all the intermediate states involves an arbitrary number of virtual particles of arbitrarily high energies. It is fundamental to note that none of the intermediate states are observed since the experiment only answers the question \emph{``What is the probability of finding the system in the state $|f\rangle $ at  the end of the experiment if we know that it was initially in the state $|i\rangle$?"}.  
 
 In most cases of interest, the sum over intermediate states diverges as the upper limit of the energy $\Lambda$ of the virtual particles go to infinity. However, for the so-called renormalizable theories, it turns out that these infinities cancel  when the parameters of the theory (masses $m(\Lambda)$ and coupling constants  $g(\Lambda)$) are suitably chosen as functions of  $\Lambda$, which may then be taken to infinity leaving physically relevant quantities finite. This is the process of renormalization, as it occurs in high energy physics: The effect of unobserved virtual states of high energy is taken into account in some of the parameters of the theory. In a certain sense, the cut-off $\Lambda$ sets a limit for the validity of our field theory  and the sole effect of the very high energy modes beyond $\Lambda$ is to adapt the parameters of the theory to energy of the process we consider.  Alternatively, this can also be considered as an ignorance of the very small scale structure of space-time since high energy correspond to small distances by Fourier transform.
 
@@ -2048,12 +2048,12 @@ Loop quantum gravity (see the book \cite{rovelli} for a general overview) is a t
 
 {\bf Acknowledgements}
 
-We are grateful to F. Girelli who collaborated with us on an early stage of this work. We would also like to thank V. Rivasseau and his group for their \emph{constructive} remarks and M. Aguilar for some comments and a useful reference. Finally, let us also thank K. Ebrahimi-Fard, M. Marcolli and W. van Suijlekom, who organized the conference ``Combinatorics and Physics" at the MPIM in Bonn in march 2007. Work partially supported by a EU Marie Curie fellowship EIF-025947 QGNC.
+We are grateful to F. Girelli who collaborated with us on an early stage of this work. We would also like to thank V. Rivasseau and his group for their \emph{constructive} remarks and M. Aguilar for some comments and a useful reference. Finally, let us also thank K. Ebrahimi-Fard, M. Marcolli and W. van Suijlekom, who organized the conference ``Combinatorics and Physics'' at the MPIM in Bonn in march 2007. Work partially supported by a EU Marie Curie fellowship EIF-025947 QGNC.
 
 \begin{thebibliography}{99}
 \bibitem{ck0}
   A.~Connes and D.~Kreimer,
-  {\it ``Hopf algebras, renormalization and noncommutative geometry"},
+  {\it ``Hopf algebras, renormalization and noncommutative geometry''},
   Commun.\ Math.\ Phys.\  {\bf 199} (1998) 203
   [arXiv:hep-th/9808042]
 
@@ -2093,7 +2093,7 @@ J.~Zinn-Justin,
 
 \bibitem{Rivasseau}
   V.~Rivasseau,
-  {\it "An Introduction To Renormalization''},
+  {\it ``An Introduction To Renormalization''},
   In *Duplantier, B. (ed.) et al.: Poincare Seminar 2002* 139-177, also available at {\tt http://www.bourbaphy.fr/Rivasseau.pdf}
 
 \bibitem{butcher}
@@ -2102,7 +2102,7 @@ J.C.~Butcher, {\it The numerical analysis of ordinary differential equations}, J
 
 \bibitem{Polchinski}
 J.~Polchinski,
-  {\it "Renormalization And Effective Lagrangians''}, 
+  {\it ``Renormalization And Effective Lagrangians''}, 
   Nucl.\ Phys.\  B {\bf 231} (1984) 269
 
 
@@ -2117,19 +2117,19 @@ Y.G.~Sinai {\it Probability theory: An introductory course}, Springer (1991)
 
 \bibitem{jona}
 G.~Jona-Lasinio,
-  {\it 'Renormalization group and probability theory''},
+  {\it ``Renormalization group and probability theory''},
   Phys.\ Rept.\  {\bf 352} (2001) 439
   
   
   
 \bibitem{brouder}
    C.~Brouder,
-  {\it "Runge-Kutta methods and renormalization''}
+  {\it ``Runge-Kutta methods and renormalization''}
   Eur.\ Phys.\ J.\  C {\bf 12} (2000) 521
   [arXiv:hep-th/9904014]
 
 \bibitem{cartier}
-P.~Cartier,  {\it "A review of Hopf algebras and their applications to combinatorics"}, lecture at this conference, see also {\it "A primer of Hopf algebras"}, IHES preprint M/06/40
+P.~Cartier,  {\it ``A review of Hopf algebras and their applications to combinatorics''}, lecture at this conference, see also {\it "A primer of Hopf algebras"}, IHES preprint M/06/40
 
 \bibitem{wanner} 
 E.~ Hairer and G.~Wanner, {\it "On the Butcher group and general multi-value methods"}, Computing {\bf
@@ -2137,7 +2137,7 @@ E.~ Hairer and G.~Wanner, {\it "On the Butcher group and general multi-value met
 
 \bibitem{kreimer}
   D.~Kreimer,
-  {\it ''On the Hopf algebra structure of perturbative quantum field theories''}
+  {\it ``On the Hopf algebra structure of perturbative quantum field theories''}
   Adv.\ Theor.\ Math.\ Phys.\  {\bf 2} (1998) 303
   [arXiv:q-alg/9707029]
 
@@ -2146,20 +2146,20 @@ R.~P.~Stanley, {\it Enumerative combinatorics Vol. 1},  Cambridge Univ. Pr.  (19
 
 
 \bibitem{difrancesco}
-P.~Di~Francesco, {\it "Integrable Combinatorics"}, lecture at this conference, see also {\it "2D quantum gravity, matrix models and graph combinatorics''} [arXiv:math-ph/0406013]
+P.~Di~Francesco, {\it ``Integrable Combinatorics"}, lecture at this conference, see also {\it "2D quantum gravity, matrix models and graph combinatorics''} [arXiv:math-ph/0406013]
 
 
 
 \bibitem{GKM}
   F.~Girelli, T.~Krajewski and P.~Martinetti,
-  {\it "An algebraic Birkhoff decomposition for the continuous renormalization group''},
+  {\it ``An algebraic Birkhoff decomposition for the continuous renormalization group''},
   J.\ Math.\ Phys.\  {\bf 45} (2004) 4679
   [arXiv:hep-th/0401157]
 
 
 \bibitem{Hurd}
 T.~R.~Hurd,
-  {\it "A renormalization group proof of perturbative renormalizabilty''},
+  {\it ``A renormalization group proof of perturbative renormalizabilty''},
   Commun.\ Math.\ Phys.\  {\bf 124} (1989) 153
 
 
@@ -2179,21 +2179,21 @@ Wissenschaften, Springer-Verlag  (1983)
 
 \bibitem{tutte}
 J.~Ellis-Monaghan and C.~Merino,
-{\it "Graph polynomials and their applications I: The Tutte polynomial"},
+{\it ``Graph polynomials and their applications I: The Tutte polynomial"},
 [arXiv:0803.3079]
 
 
 
 \bibitem{KRS}
 W.~Kook, V.~ Reiner and D.~Stanton,
-{\it "A Convolution Formula for the Tutte Polynomial"},
+{\it ``A Convolution Formula for the Tutte Polynomial"},
  J. Comb. Theory {\bf B76} (1999) 297
  [arXiv:math/9712232]
 
 
 
 \bibitem{cvitanovic}
-P.~Cvitanovic {\it"Feynman Diagrammatics: Six Easy Pieces"} lecture at this conference, see also
+P.~Cvitanovic {\it ``Feynman Diagrammatics: Six Easy Pieces"} lecture at this conference, see also
 {\it Field Theory} (1983), avalable at {\tt http://ChaosBook.org/FieldTheory/}
 
 
@@ -2203,7 +2203,7 @@ P.~Cvitanovic {\it"Feynman Diagrammatics: Six Easy Pieces"} lecture at this conf
   Nucl.\ Phys.\  B {\bf 538} (1999) 389
   [arXiv:hep-th/9808113]
 \bibitem{sokal}
-A.~ Sokal {\it "The multivariate Tutte polynomial (alias Potts model) for graphs and matroids"}, {\it Surveys in combinatorics 2005}, 173--226, London Math. Soc. Lecture Note Ser., 327, Cambridge Univ. Pr. (2005)
+A.~ Sokal {\it ``The multivariate Tutte polynomial (alias Potts model) for graphs and matroids"}, {\it Surveys in combinatorics 2005}, 173--226, London Math. Soc. Lecture Note Ser., 327, Cambridge Univ. Pr. (2005)
 
 
 \bibitem{rovelli}
@@ -2212,15 +2212,15 @@ C.~Rovelli, {\it Quantum Gravity}, Cambridge Univ. Pr. (2004)
   
 \bibitem{Fotini}
   F.~Markopoulou,
-  {\it "Coarse graining in spin foam models''},
+  {\it ``Coarse graining in spin foam models''},
   Class.\ Quant.\ Grav.\  {\bf 20} (2003) 777
   [arXiv:gr-qc/0203036].
 
 \bibitem{oriti}
-  D.~Oriti, {\it"Group Field Theories, or the combinatorial and group-theoretic path to Quantum Gravity
+  D.~Oriti, {\it ``Group Field Theories, or the combinatorial and group-theoretic path to Quantum Gravity
 and quantum simplicial geometry
-"} talk at this conference, see also
-  {\it "A combinatorial and field theoretic path to quantum gravity: the new
+''} talk at this conference, see also
+  {\it ``A combinatorial and field theoretic path to quantum gravity: the new
   challenges of group field theory''}
   arXiv:0709.4157 [hep-th].
   
