--- a/0806.4309/ProceedingBonn.tex
+++ b/0806.4309/ProceedingBonn.tex
@@ -129,14 +129,14 @@ Later on, QFT progressively invaded almost all fields of theoretical physics.  R
 \begin{equation}
 \int[D\phi]\,\mathrm{e}^{-S[\phi]},
 \end{equation}
-where the integration is over a space of functions. When considered as a perturbation of a Gau\ss ian  integral, this path integral is expanded over Feynman diagrams. Because of the continuous nature of the path integral, some of these diagrams yield divergent quantities, as dictated by dimensional analysis, and can only acquire a meaning through renormalization. In a certain sense, it can be said that the founding fathers of QFT (Dirac, Feynman,  Schwinger, Tomonoga, Dyson, Weinberg, t'Hooft, Veltman, Wilson and many others) have achieved an infinite dimensional analogue of Newton's work: Driven by fundamental physics, they devised a new form of calculus based on path integrals, Feynman diagrams and renormalization.
+where the integration is over a space of functions. When considered as a perturbation of a Gaussian  integral, this path integral is expanded over Feynman diagrams. Because of the continuous nature of the path integral, some of these diagrams yield divergent quantities, as dictated by dimensional analysis, and can only acquire a meaning through renormalization. In a certain sense, it can be said that the founding fathers of QFT (Dirac, Feynman,  Schwinger, Tomonoga, Dyson, Weinberg, t'Hooft, Veltman, Wilson and many others) have achieved an infinite dimensional analogue of Newton's work: Driven by fundamental physics, they devised a new form of calculus based on path integrals, Feynman diagrams and renormalization.
 
 
 However, it is fair to say that this new calculus is not yet fully understood. In particular, it hides an algebraic structure analogous to diffeomorphisms, as uncovered by Connes and Kreimer a decade ago (see \cite{ck0}, \cite{ck1} and \cite{ck2} as well as the first chapter of the book \cite{connesmarcolli} and \cite{kk} for recent reviews). To be specific, divergent Feynman diagrams generate a commutative Hopf algebra whose associated group is a refinement of the group of diffeomorphisms of the coupling constant. This formalism is versatile enough to encompass the infinite dimensional analogue of the change of parameters provided by the computation of the Wilsonian effective action, as we show in this paper. Our contribution is organized as follows.
 
 In the first section, we give a terse account of renormalization. We first recall the elementary particle physics point of view and introduce Feynman diagrams. Then, we introduce Wilson's viewpoint, first for spin systems and then for general QFT. This is textbook physics and can be found in modern texts on QFT (to quote only a few authors who strongly influenced our presentation, see the textbook \cite{zee}  by Zee for an eclectic overview of QFT applied to particle and condensed matter physics, the treatise by Zinn-Justin \cite{zinn} for a general treatment of QFT in the path integral formalism  and the review by Rivasseau \cite{Rivasseau} for an introduction to renormalization, accessible to a large audience). We close this section by recalling a renormalization group proof of the central limit theorem of probability theory that may help mathematicians grasp Wilson's ideas.
 
-The next section is devoted to rooted trees and their Hopf algebra. These were introduced as fundamental tools in the numerical analysis of a differential equation by Butcher \cite{butcher}. We revisit this construction and interpret trees as indices for power series of non linear operators, with composition law given by the convolution product. We illustrate this construction with the non linear geometric series that provides a pertubative solution of a general fixed point equation. This can be used to resum tree like structures as shown on a elementary example based on Gau\ss ian random matrices.
+The next section is devoted to rooted trees and their Hopf algebra. These were introduced as fundamental tools in the numerical analysis of a differential equation by Butcher \cite{butcher}. We revisit this construction and interpret trees as indices for power series of non linear operators, with composition law given by the convolution product. We illustrate this construction with the non linear geometric series that provides a pertubative solution of a general fixed point equation. This can be used to resum tree like structures as shown on a elementary example based on Gaussian random matrices.
 
 In the last section, we deal with renormalization. We first formulate perturbative renormalization for a general renormalization group differential equation. Then, we introduce a general Hopf algebra of Feynman diagrams that encodes successive effective action computations. We illustrate the use of this Hopf algebra on two examples. First, we give a new proof of the universality of Tutte polyomial and of its relation to the Potts model. Then, we use the Hopf algebra to solve Polchinski's equation that describes the flow of effective actions in QFT. Finally, in the last section we investigate an analogous structure based on the Schwinger-Dyson equations. As a byproduct, we obtain a new bijection between planar $\phi^{3}$ diagrams and a certain class of decorated rooted trees.  
  
@@ -206,7 +206,7 @@ and the interaction potential $V$ is a polynomial in all the fields
 V(\phi)=\sum_{N}\sum_{i_{1},\dots,i_{N}}\frac{g_{i_{1},\dots,i_{N}}}{N!}\phi_{i_{1}}\cdots\phi_{i_{N}}.
 \label{finitepot}
 \end{equation}
-In this case we choose ${\cal N}^{-1}=\det A/2\pi$ and expand $\mathrm{e}^{-V(\phi)}$ as a power series in the couplings $g_{i_{1},\dots,i_{N}}$. Thus, \eqref{greenfinite} amounts to the computation of the average of a monomial using a Gau\ss ian weight and is given by Wick's theorem: It is a sum over all possible pairings of the variables in the monomial, each pairing of $\phi_{i}$ with $\phi_{j}$ being weighted by $A_{ij}$. For example,
+In this case we choose ${\cal N}^{-1}=\det A/2\pi$ and expand $\mathrm{e}^{-V(\phi)}$ as a power series in the couplings $g_{i_{1},\dots,i_{N}}$. Thus, \eqref{greenfinite} amounts to the computation of the average of a monomial using a Gaussian weight and is given by Wick's theorem: It is a sum over all possible pairings of the variables in the monomial, each pairing of $\phi_{i}$ with $\phi_{j}$ being weighted by $A_{ij}$. For example,
  \begin{equation}
  \phi_{i} \phi_{j} \phi_{k} \phi_{l}\quad\rightarrow\quad
 A_{ij}A_{kl}+A_{ik}A_{jl}+A_{il}A_{jk}.
@@ -472,7 +472,7 @@ Eliminating $s^{n}$ we obtain the critical behavior of the correlation,
 where we have discarded a slowly varying  multiplicative constant . 
 
 
-To end this very brief introduction to Wilson's ideas, let us sketch a renormalization group proof of the central limit theorem in probability theory, which has the merit of explaining the universal nature of the Gau\ss ian probability law (see \cite{sinai} and \cite{jona}). Consider $N=2^{n}$ independent identically distributed (IID) random variables $\xi_{i}$ with probability density $\rho_{0}$, assuming that its variance is 1 and a vanishing expectation value. Recall that the central limit theorem states that  
+To end this very brief introduction to Wilson's ideas, let us sketch a renormalization group proof of the central limit theorem in probability theory, which has the merit of explaining the universal nature of the Gaussian probability law (see \cite{sinai} and \cite{jona}). Consider $N=2^{n}$ independent identically distributed (IID) random variables $\xi_{i}$ with probability density $\rho_{0}$, assuming that its variance is 1 and a vanishing expectation value. Recall that the central limit theorem states that  
 \begin{equation}
 \zeta_{N}=\frac{\xi_{1}+\cdots+\xi_{N}}{\sqrt{N}}
 \end{equation}
@@ -491,11 +491,11 @@ so that the probability density of $\zeta_{N}$ can be written as
 \begin{equation} 
 \rho_{n}={\cal R}^{n}(\rho_{0}).
 \end{equation}
-The renormalization map ${\cal R}$ admits the Gau\ss ian
+The renormalization map ${\cal R}$ admits the Gaussian
 \begin{equation}
 \rho_{*}(x)=\textstyle{\frac{1}{\sqrt{2\pi}}}\mathrm{e}^{-x^{2}/2},
 \end{equation}
-as a fixed point. To investigate the stability of this fixed point, let us linearize ${\cal R}$ in the neighborhood of the Gau\ss ian. Writing the perturbation as
+as a fixed point. To investigate the stability of this fixed point, let us linearize ${\cal R}$ in the neighborhood of the Gaussian. Writing the perturbation as
 \begin{equation}
 \rho(x)=\textstyle{\frac{1}{\sqrt{2\pi}}}\mathrm{e}^{-x^{2}/2}
 \Big(1+\epsilon(x)\Big),
@@ -930,7 +930,7 @@ Alternatively, one can be given a pertubative expansion exhibiting a natural tre
 
 \subsection{Wigner's semi-circle law from rooted trees}
 
-Let us give a very simple illustration of way one can use rooted trees to recover Wigner's semi-circle law of an ensemble of Gau\ss ian Hermitian $N\times N$ matrices. This technique is nothing but  a rooted tree formalisation of the treatment that can be found in \cite{zee}. 
+Let us give a very simple illustration of way one can use rooted trees to recover Wigner's semi-circle law of an ensemble of Gaussian Hermitian $N\times N$ matrices. This technique is nothing but  a rooted tree formalisation of the treatment that can be found in \cite{zee}. 
 
 We are interested in the large $N$ behavior of the density of eigenvalues, defined as
 \begin{equation}
@@ -952,7 +952,7 @@ Introducing $z=\lambda-\mathrm{i}\epsilon$ to simplify the notation, we expand t
 \end{equation}
 
 
-The expectation value $G(z)$ of  $\frac{1}{z-M}$ is easily computed using Wick's theorem with the Gau\ss ian matrix integral. It leads to Feynman rules with a single line propagator for $\frac{1}{z}$ a double line propagator $\frac{1}{N}$ for the propagation of the matrix field and a vertex set to 1 for the interaction of 2 single lines with a double line. Then, each face of the resulting diagram yields a factor $N$ because of the summation over matrix indices. Thus, the leading contribution in the large $N$ limit is given by those diagrams that have as many faces as possible for a fixed number of propagator. These diagrams are nothing but the celebrated planar diagrams.
+The expectation value $G(z)$ of  $\frac{1}{z-M}$ is easily computed using Wick's theorem with the Gaussian matrix integral. It leads to Feynman rules with a single line propagator for $\frac{1}{z}$ a double line propagator $\frac{1}{N}$ for the propagation of the matrix field and a vertex set to 1 for the interaction of 2 single lines with a double line. Then, each face of the resulting diagram yields a factor $N$ because of the summation over matrix indices. Thus, the leading contribution in the large $N$ limit is given by those diagrams that have as many faces as possible for a fixed number of propagator. These diagrams are nothing but the celebrated planar diagrams.
 
 The planar Feynman diagrams that contribute to $G(z)$ are in one to one correspondence with planar rooted trees (i.e. rooted trees counted as different if they differ by a permutation of their vertices).  The bijection is obtained by  drawing boxes that are either disjoint or nested around the matrix propagators, with the diagram always in the outermost box, even if there is no matrix propagator. This outermost box defines the root and the tree is drawn from the root to the leaves by following the natural hierarchal structure of the inclusion of the boxes.
 
@@ -1393,7 +1393,7 @@ To handle more complicated situations, it may necessary to decorate the Feynman 
 \begin{equation}
 \Psi_{\beta}^{B}\circ\Psi_{\alpha}^{A}=\Psi_{\alpha\ast\beta}^{A,B}\label{AB},
 \end{equation}
-Both $\alpha$ and $\beta$ are characters of the Hopf algebra with two decorations on the internal lines, but $\alpha$ and (resp. $\beta$) vanish on diagrams that do not contain $A$ (resp. $B$). The previous relation is a generalization of the convolution of Gau\ss ian integrals
+Both $\alpha$ and $\beta$ are characters of the Hopf algebra with two decorations on the internal lines, but $\alpha$ and (resp. $\beta$) vanish on diagrams that do not contain $A$ (resp. $B$). The previous relation is a generalization of the convolution of Gaussian integrals
 \begin{eqnarray}
 \int[D\chi]\,\int[D\xi]\,
 \exp\left\{-{\textstyle\frac{1}{2}}\chi A^{-1}\chi-{\textstyle \frac{1}{2}}\xi B^{-1}\xi+\-S[\phi+\chi+\xi]\right\}&=&\cr
@@ -1590,7 +1590,7 @@ According to the general rule of effective action composition \eqref{composeeff}
 with $V_{\gamma}$ the number of vertices of $\gamma$.
 The choice of the universal action $S[\phi]=\lambda\mathrm{e}^{\phi}$ is motivated by the fact that it generates all diagrams with a factor 1. If restrict ourselves to a monomial like $\lambda\frac{\phi^{n}}{n!}$, then we generate only the diagrams with $n$-valent vertices. 
 
-Unfortunately, it is not yet possible to interpret \eqref{generating} as a generating function for the Tutte polynomial, since this would require us to be able to identify the contribution of each diagram in the  perturbative expansion. To proceed, we have to write the integrals over $\phi$ and $\chi$ as a single integral which is a perturbation of a Gau\ss ian integral.   This can be easily done when $q$ is an integer by introducing $q$ independent fields $\chi$ 
+Unfortunately, it is not yet possible to interpret \eqref{generating} as a generating function for the Tutte polynomial, since this would require us to be able to identify the contribution of each diagram in the  perturbative expansion. To proceed, we have to write the integrals over $\phi$ and $\chi$ as a single integral which is a perturbation of a Gaussian integral.   This can be easily done when $q$ is an integer by introducing $q$ independent fields $\chi$ 
 \begin{equation}
 \left(
 \int[D\chi]\,\mathrm{e}^{-\frac{1}{2v}\chi^{2}}\,
@@ -1605,7 +1605,7 @@ Then, the integral over $\phi$ and $\chi$ in \eqref{generating} reads
 \mathrm{e}^{-\frac{1}{2}\phi^{2}}
 \mathrm{e}^{-\frac{1}{2v}\sum_{i}(\chi_{i})^{2}}\mathrm{e}^{\frac{1}{v}\sum_{i}S[\chi_{i}+\phi]}
 \end{equation}
-It is convenient to trade $\chi_{i}$ for $\xi_{i}=\chi_{i}+\phi$ so that the integral over $\phi$ is Gau\ss ian 
+It is convenient to trade $\chi_{i}$ for $\xi_{i}=\chi_{i}+\phi$ so that the integral over $\phi$ is Gaussian 
 \begin{equation}
 \int [D\phi]\int \prod_{1\leq i\leq q}[D\xi_{i}]\,
 \mathrm{e}^{-\frac{1}{2}\left(1+u\right)\phi^{2}
@@ -1613,14 +1613,14 @@ It is convenient to trade $\chi_{i}$ for $\xi_{i}=\chi_{i}+\phi$ so that the int
 \times\mathrm{e}^{-\frac{1}{2v}\sum_{i}\xi_{i}^{2}}
 \times\mathrm{e}^{\frac{1}{v}\sum_{i}S[\xi_{i}]}.
  \end{equation}
-Performing the Gau\ss ian integral over $\phi$  and discarding an overall constant which is absorbed in the normalization, we get
+Performing the Gaussian integral over $\phi$  and discarding an overall constant which is absorbed in the normalization, we get
 \begin{equation}
 \int \prod_{1\leq i\leq q}[D\xi_{i}]\,
 \mathrm{e}^{-\frac{1}{2v}\left\{
 \left(\sum_{i}(\xi_{i})^{2}-\frac{1}{v(1+u)}\left(\sum_{i}\xi_{i}\right)^{2}\right)\right\}}
 \times\mathrm{e}^{\frac{1}{v}\sum_{i}S[\xi_{i}]}.
  \end{equation}
-This can be written as a perturbed Gau\ss ian integral over a multiplet of fields $\xi=(\xi_{i})$, so that \eqref{generating} reads
+This can be written as a perturbed Gaussian integral over a multiplet of fields $\xi=(\xi_{i})$, so that \eqref{generating} reads
 \begin{equation}
 \frac{1}{u}\log\left\{
 \int  [D\xi]\,
