add paragraph about sets

--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -93,6 +93,15 @@ $f$.
 can always just write $hgf$ if we want. \end{itemize}%
 \end{defn}%
 \noindent
+The definition of categories is an abstraction of many different kinds of definitions in
+mathematics where we are given a some collection of things and some structural rules. The
+main example of a category that we will be concerned with is the category $\Set$, where
+the objects are sets and the arrows are mappings between sets. In this context something
+interesting to ponder is how the definition of a category only tells you that each mapping
+$f: A \to B$ acts on things in $A$ and sends them to things in $B$. There is nothing said
+about the specific action of $f$ on any single element of $A$. Category theory only
+ponders aggregate questions.
+
 Given a category $\CC$ and objects $A, B$ in $\CC$ we write 
 $\Arrows_{\CC}(A, B)$ to mean the collection of all arrows 
 from $A$ to $B$ in $\CC$ if we are being maximally careful. In practice
@@ -109,9 +118,8 @@ spelled out names for clarity rather than engaging in the strange and random abb
 that I see in most category theory texts. The general fear of readable names in the
 mathematical literature is fascinating to me, having spent most of my life trying to think
 up readable names in program source code. Life is too short to deal with names like
-$\mathop{\mathit{ob}}$, or $\cat{Htpy}$, or $\cat{Matr}$. Luckily, for this note the only
-specific category that we will run into is the straightforwardly named $\Set$, 
-where the objects are sets and the
+$\mathop{\mathit{ob}}$, or $\cat{Htpy}$, or $\cat{Matr}$. Again, our favorite category for the
+rest of this note will be the straightforwardly named $\Set$, where the objects are sets and the
 arrows are mappings between sets.
 
 Speaking of sets, in the definition of categories we were careful about not calling
