--- a/2205.05986/2205.05986-psu.tex
+++ b/2205.05986/2205.05986-psu.tex
@@ -1,5 +1,7 @@
 \UseRawInputEncoding % zahtjeva arXiv
 \documentclass[12pt]{article}
+
+\usepackage{lmodern}
 %\usepackage{graphicx}% Include figure files
 %\usepackage[encoding name]{inputenc} % zahtjeva arXiv
 \usepackage{latexsym}% for \Box command
@@ -18,6 +20,52 @@
 \setlength{\evensidemargin}{\oddsidemargin}
 \setlength{\topmargin}{-0.6in}
 %\linespread{1.6}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+%\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+%\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \title{Relativistic QFT from a Bohmian perspective: \\
 A proof of concept}
@@ -1008,7 +1056,7 @@ A. Peres, {\it Quantum Theory: Concepts and Methods} (Kluwer Academic Publishers
 
 \bibitem{nik-pilotQFT}
 H. Nikoli\'c, Int. J. Mod. Phys. A {\bf 25}, 1477 (2010); arXiv:0904.2287.
-￼\bibitem{nik-book}
+\bibitem{nik-book}
 H. Nikoli\'c, in \cite{oriols}; arXiv:1205.1992.
 \bibitem{nik2013}
 H. Nikoli\'c, arXiv:1309.0400.
