--- a/1205.1992/1205.1992.tex
+++ b/1205.1992/1205.1992.tex
@@ -8,31 +8,43 @@
 \setlength{\evensidemargin}{0.1in}
 \setlength{\topmargin}{-0.2in}
 
-\usepackage[colorlinks=true
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
 ,urlcolor=blue
 ,anchorcolor=blue
 ,citecolor=blue
 ,filecolor=blue
 ,linkcolor=blue
 ,menucolor=blue
-,linktocpage=true]{hyperref}
+,linktocpage=true}
 \hypersetup{
 bookmarksopen=true,
 bookmarksnumbered=true,
 bookmarksopenlevel=10
 }
-\usepackage{mathpazo}
 
-\linespread{1.1}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
-\tolerance=2000
-\hbadness=2000
-\usepackage[small]{titlesec}
-
-% different \sum and also fixes underbraces
-\input{../helpers/mnsymbol.tex}
-\sloppy
-
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
 %\documentclass{psp-rv975x65}
 %\copyline{Applied Bohmian Mechanics: From Nanoscale Systems to %Cosmology}{2009}{978-981-nnnn-nn-n}
 \begin{document}
