--- a/2405.05617/2405.05617.tex
+++ b/2405.05617/2405.05617.tex
@@ -8,6 +8,7 @@
 \raggedbottom
 \pagestyle{plain}
 
+
 % these include amsmath and that can cause trouble in older docs.
 \input{/Users/psu/arxiv-psu/helpers/cmrsum}
 \input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
@@ -81,7 +82,9 @@ collapse. The two kinds of radiation are entangled, which resolves black hole in
 
 \maketitle
 
-{\it Introduction}. --- The black hole information paradox 
+\section{Introduction}
+
+The black hole information paradox 
 \cite{gid,math1,math2,hoss,dundar,harlow,polchinski,chakra,marolf,fabbri}
 is one of the greatest unsolved problems in theoretical physics. 
 The problem appears within semiclassical theory of gravity 
@@ -150,7 +153,9 @@ the latter being similar to radiation produced during the classical gravitationa
 loses classical hair. We also discuss the role of more exotic quantum gravitational objects, proposed in the literature
 as possible solutions of black hole information paradox.      
 
-{\it Hydrogen atom information paradox}.---Consider a slow electron brought close to a proton. Soon the electron will
+\section{Hydrogen atom information paradox}
+
+Consider a slow electron brought close to a proton. Soon the electron will
 settle down into the ground state $|\psi_0\rangle$ of the hydrogen atom, independently of the initial electron state.
 This already looks like an apparent loss of information about the initial state, but, of course, the information is not lost,
 because it is encoded in electromagnetic radiation that electron emits during the process. This is analogous 
@@ -192,7 +197,9 @@ the outgoing Hawking particles (analogous to particle-$B$) there is also a secon
 (analogous to secondary electromagnetic radiation), so that the outgoing Hawking particles are correlated with 
 the secondary radiation.
 
-{\it Two harmonic oscillators}.---Consider two uncoupled quantum harmonic oscillators, each having the same 
+\section{Two harmonic oscillators}
+
+Consider two uncoupled quantum harmonic oscillators, each having the same 
 characteristic frequency $\omega$ and an $n$-basis consisting of states of the usual form
 \begin{equation}
  |n\rangle=\frac{a^{\dagger}|0\rangle}{\sqrt{n!}} .
@@ -222,7 +229,9 @@ where $c_n(z)={\cal N} e^{-\beta\omega n/2} {}_A\langle z|n\rangle_A$. The $|c_n
 the oscillator-$B$ will be found in the quantum state $|n\rangle_B$, and the oscillator-$A$ in the quasi-classical
 coherent state $|z\rangle_A$.
 
-{\it Semiclassical black hole}.---Consider a black hole of mass $M$, described either by Schwarzschild $S$-coordinates
+\section{Semiclassical black hole}
+
+Consider a black hole of mass $M$, described either by Schwarzschild $S$-coordinates
 with coordinate singularity at the horizon at $r=2M$, or by Kruskal $K$-coordinates without a coordinate singularity.
 The initial state of the quantum field $\phi(x)$ in the 
 classical black hole background is the Kruskal vacuum $|O_K\rangle$ \cite{bd} (known also as Hartle-Hawking vacuum),
@@ -330,7 +339,9 @@ Again, (\ref{psik3}) shows that the physical particles in zone-$B$ are entangled
 in the entire zone-$(1\!\cup\! A)$, which is sufficiently large to resolve the black hole information paradox.
 
 
-{\it What happens in zone-$(1\!\cup\! A)$?}---So far we explained that zone-$(1\!\cup\! A)$, 
+\section{What happens in zone-$(1\!\cup\! A)$?}
+
+So far we explained that zone-$(1\!\cup\! A)$, 
 bounded by the surface of large radius $R'\gg 2M$, is sufficiently large to accommodate all the entropy needed to resolve
 the black hole information paradox. Nevertheless, since the particle states in that zone are not physical particles, 
 the question is how to understand that zone in terms of physical objects?
@@ -408,7 +419,9 @@ the most conservative, and perhaps the most plausible, is the scenario in which 
 by the configurations that maximally resemble the known field configurations in classical general relativity, 
 namely classical hair radiated away by classical mechanisms, as we explained above.
 
-{\it Discussion and conclusion}---The crucial ingredient of our approach is the idea that Hawking particles are physical 
+\section{Discussion and conclusion}
+
+The crucial ingredient of our approach is the idea that Hawking particles are physical 
 only at large distances $r\gg 2M$ from the black hole, where inertial observers are approximately static with respect 
 to the black hole. At smaller distances it is more physical to describe physics in terms of different objects, 
 that can be entangled with Hawking particles at large distances. Those different objects are most naturally described in terms 
