--- a/2405.05617/2405.05617.tex
+++ b/2405.05617/2405.05617.tex
@@ -1,4 +1,4 @@
-\documentclass[aps,prd,onecolumn,groupedaddress,showkeys,12pt]{revtex4-2}
+\documentclass[12pt]{article}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
@@ -49,22 +49,31 @@ bookmarksopenlevel=10
 \usepackage{graphicx}% Include figure files
 \usepackage{dcolumn}% Align table columns on decimal point\emph{}
 \usepackage{bm}% bold math
-\usepackage{hyperref} %for \url{...}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+\usepackage{cite}
 
 \begin{document}
 
 \title{Semiclassical solution of black hole information paradox}
 
-\author{Hrvoje Nikoli\'c}
-\affiliation{Theoretical Physics Division, Rudjer Bo\v{s}kovi\'{c} Institute,
+\author{Hrvoje Nikoli\'c \\
+Theoretical Physics Division, Rudjer Bo\v{s}kovi\'{c} Institute,\\
 P.O.B. 180, HR-10002 Zagreb, Croatia.}
-\email{hnikolic@irb.hr}
+%\email{hnikolic@irb.hr}
 
 \date{9 May 2024}
 
+%\keywords{black hole; information paradox; semiclassical gravity}
+
+%\pacs{04.70.Dy}
+% 04.70.Dy 	Quantum aspects of black holes, evaporation, thermodynamics 
+% 03.65.Ta 	Foundations of quantum mechanics; measurement theory
+
+\maketitle
+
 \begin{abstract}
-\small
-\baselineskip 14pt
 We resolve black hole information paradox within semiclassical gravity, in a manner that does not depend on 
 details of unknown quantum gravity. Our crucial insight is that outgoing Hawking particles are physical only 
 at distances much larger than the Schwarzschild radius, so they are created far from the horizon and entangled 
@@ -73,14 +82,6 @@ quasi-classical coherent states, implying that Hawking radiation is accompanied 
 radiation similar to classical radiation by which the black hole loses hair during the classical gravitational 
 collapse. The two kinds of radiation are entangled, which resolves black hole information paradox. 
 \end{abstract}
-
-\keywords{black hole; information paradox; semiclassical gravity}
-
-%\pacs{04.70.Dy}
-% 04.70.Dy 	Quantum aspects of black holes, evaporation, thermodynamics 
-% 03.65.Ta 	Foundations of quantum mechanics; measurement theory
-
-\maketitle
 
 \section{Introduction}
 
