--- a/0909.1038/cernp.tex
+++ b/0909.1038/cernp.tex
@@ -238,7 +238,7 @@ $L'\sim 10^{77} ~~{\rm light~years}$ (Fig.~\ref{fone}(c)).
 |\Psi\rangle\approx |\psi\rangle_M\otimes\Big( \sq \z_c\z_b+\sq\o_c\o_b\Big)
 \label{qtwo}
 \ee
-Even though the matter $|\psi\rangle_M$ is far away from the place where the pairs are being created, there will always be {\it some} effect of $|\psi\rangle_M$ on the state of the create pairs. This is why we have written an $\approx$ sign in (\ref{qtwo}). But it is crucial to Hawking's argument that we make this more precise.
+Even though the matter $|\psi\rangle_M$ is far away from the place where the pairs are being created, there will always be {\it some} effect of $|\psi\rangle_M$ on the state of the created pairs. This is why we have written an $\approx$ sign in (\ref{qtwo}). But it is crucial to Hawking's argument that we make this more precise.
 
 Let the state of matter $|\psi\rangle_M$ consist of a single spin which can be up or down. Let us take
 $
