--- a/0810.1279/setcat.tex
+++ b/0810.1279/setcat.tex
@@ -46,7 +46,7 @@ bookmarksopenlevel=10
 
 \title{Set theory for category theory}
 \author{Michael A. Shulman}
-\date{\today}
+\date{7 Oct 2008}
 \newcommand{\Set}{\ensuremath{\mathbf{Set}}}
 \mdef\bAbar{\overline{\mathbf{A}}}
 \mdef\Mnd{\mathbf{Mnd}}
