--- a/1109.3593/dispersion-JHEP.tex
+++ b/1109.3593/dispersion-JHEP.tex
@@ -27,7 +27,7 @@ bookmarksopenlevel=10
 }
 \usepackage[noBBpl,sc]{mathpazo}
 \linespread{1.1}
-\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.5in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
 \usepackage[small]{titlesec}
@@ -36,7 +36,7 @@ bookmarksopenlevel=10
 \titlelabel{{\thetitle}.\quad}
 
 
-\input{../helpers/mnsymbol.tex}
+\input{../helpers/cmrsum.tex}
 \input{../helpers/fix-underbrace.tex}
 %\input{../helpers/revtex-12-fix.tex}
 %\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
@@ -103,6 +103,7 @@ can result in a mechanism for Hawking-like emission.}
 %\pacs{04.62.+v, 03.75.Kk, 04.70.Dy}
 \maketitle
 %\markboth{(\fecha)}{(\fecha)}
+\newpage
 
 %-----------------------------------------------------------------------
 \section{Introduction}
